# clib-mqueue

./: .env  .envr  .envx  .gdb.tap.sh_profile.rc  .gitignore  .vim.custom  Android.mk  CMakeLists.txt  Makefile  NEWS  README  README.md  assert_np.c  assert_np.h  config.h.in  initfini.c  libcwrap.h  mqueue.c  test-posix.c
doc/: 0_0_preface.txt  1_0_purpose_and_definition.txt  1_1_history.txt
include/: mqueue.h
lib/: README
libmqueue/: .vim.custom  Android.mk  Makefile  libcwrap.h  mqueue.c
libmqueue/include/: mqueue.h
test/: Android.mk  Makefile  assert_np.h  common.mk  test-posix.c
